syntax = "proto3";

option csharp_namespace = "WarehouseManagementSystemServer";

package greet;

service Shipment{
	rpc SetShipment (ShipmentRequest) returns (ShipmentResponce);
}

message ShipmentRequest{
	repeated Party Partys = 1;
}

message Party{
	Product Product = 1;
	int32 Count = 2;
}

message Product{
	int32 Id = 1;
	string Name = 2;
	string Description = 3;
}

message ShipmentResponce{
}